<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:background="#ee8972">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_subtitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="139dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="31dp"
        android:fontFamily="@font/varelisa"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="100sp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="46dp"
        android:text="@string/tag"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/e_mail"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:inputType="textEmailAddress"
        android:layout_above="@id/et_password"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:textAlignment="center"
        android:textColorHint="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:padding="15dp"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:layout_centerInParent="true"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:background="@drawable/loginbutton"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        android:textSize="17sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorAccent"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/label_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="227dp"
        android:textAlignment="center"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorAccent"
        android:text="@string/label_one"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/label_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="105dp"
        android:fontFamily="sans-serif"
        android:text="@string/label_two"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/login_face"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@id/swipeRight"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="172dp"
        android:layout_marginEnd="209dp"
        android:layout_marginBottom="29dp"
        android:src="@drawable/facebook_100_85" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_google_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <ImageView
        android:id="@+id/login_google"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@id/swipeRight"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="206dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="29dp"
        android:src="@drawable/google_100_85" />

    <TextView
        android:id="@+id/swipeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipe_left_for_register"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>