<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".addActivity.AddHabitFragment">

    <ImageButton
        android:id="@+id/back_home"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/back"
        android:paddingBottom="10dp"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title_label"
        android:textSize="@dimen/card_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_home" />

    <EditText
        android:id="@+id/add_title_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/nav_primary"
        android:inputType="text"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/nav_primary"
        android:textColorHint="@color/nav_primary"
        android:textSize="@dimen/card_text_size"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_title" />

    <TextView
        android:id="@+id/add_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/description_label"
        android:textSize="@dimen/card_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_title_ed" />

    <EditText
        android:id="@+id/add_description_ed"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/nav_primary"
        android:inputType="text"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/nav_primary"
        android:textColorHint="@color/nav_primary"
        android:textSize="@dimen/card_text_size"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_description" />

    <LinearLayout
        android:id="@+id/linearRemind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_description_ed">

        <TextView
            android:id="@+id/add_remind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind_label"
            android:textSize="@dimen/card_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_description_ed" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <Switch
            android:id="@+id/switch_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:theme="@style/SCBSwitch" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearRemind">

        <TextView
            android:id="@+id/add_label_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/duration_label"
            android:textSize="@dimen/card_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearRemind" />

        <EditText
            android:id="@+id/add_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days" />
    </LinearLayout>

    <TextView
        android:id="@+id/add_on_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingTop="3dp"
        android:paddingRight="3dp"
        android:text="@string/on_days"
        android:textSize="@dimen/card_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_duration" />

    <LinearLayout
        android:id="@+id/linear_on_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_on_days">


        <ImageButton
            android:id="@+id/sunday"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/saturday_gray" />

        <ImageButton
            android:id="@+id/monday"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/monday_gray" />

        <ImageButton
            android:id="@+id/tuesday"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/tuesday_gray" />

        <ImageButton
            android:id="@+id/wednesday"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/wednesday_gray" />

        <ImageButton
            android:id="@+id/thursday"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/tuesday_gray" />

        <ImageButton
            android:id="@+id/friday"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/friday_gray" />

        <ImageButton
            android:id="@+id/saturday"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/saturday_gray" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/view_photo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/nav_primary"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="@dimen/card_radius"
        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/linear_on_days"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="15dp">

            <ImageButton
                android:id="@+id/add_photo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/add_photo" />

            <TextView
                android:id="@+id/choose_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingTop="20dp"
                android:paddingLeft="15dp"
                android:text="@string/add_photo"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/add_button"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/create_button"
        android:fontFamily="sans-serif"
        android:text="@string/create_habbit"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_photo" />


</androidx.constraintlayout.widget.ConstraintLayout>